# hookbridge

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  logging-dev.yml  logging.yml  mkdocs.yml  pyproject.toml  routes.json  sitemap.xml  tox.ini
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  docker-publish.yml  mkdocs-gh-pages.yml  python-package.yml
docs/: index.md
hookbridge/: api.py  configuration.py  context.py  exceptions.py  main.py  request.py  server.py
hookbridge/routes/: __init__.py  exceptions.py  service.py  validator.py
hookbridge/routes/rules/: __init__.py  input.py  output.py
hookbridge/webhook_gateway/: configuration.py  main.py
hookbridge/webhook_gateway/routes/: service.py  validator.py
search/: search_index.json
tests/: mocks.py  test_webhook_gateway.py  test_webhook_router.py
tests/routes/: test_context.py  test_rules.py  test_validator.py
webhook_gateway/: api.py  configuration.py  context.py  main.py  request.py  router.py
webhook_gateway/routes/: __init__.py  route.py  service.py  validator.py
webhook_gateway/routes/rules/: input.py  output.py
webhook_router/: api.py  configuration.py  exceptions.py  main.py  router.py  routes.py  system.py
webhook_router/routes/: __init__.py  exceptions.py  route.py  rules.py  service.py
