[tool.poetry]
name = "webhook-gateway"
version = "0.1.0"
description = "A configurable webhook gateway. Routes HTTP webhooks from any source, to any HTTP REST/JSON destination !"
authors = ["Léo GATELLIER <github@leogatellier.fr>"]
classifiers = ["License :: OSI Approved :: Apache Software License", "Development Status :: 2 - Pre-Alpha", "Topic :: Internet :: WWW/HTTP", "Topic :: System :: Networking"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.70,<0.94"
uvicorn = ">=0.15,<0.22"
dependency-injector = "^4.37.0"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
jsonpath-ng = "^1.5.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
tox = "^3.27.0"
black = "^22.12"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
