[tool.poetry]
name = "hookbridge"
version = "0.4.0"
description = "A configurable webhook bridge. Routes HTTP webhooks from any source, to any HTTP REST/JSON destination !"
authors = ["Léo GATELLIER <github@leogatellier.fr>"]
classifiers = ["License :: OSI Approved :: Apache Software License", "Development Status :: 2 - Pre-Alpha", "Topic :: Internet :: WWW/HTTP", "Topic :: System :: Networking"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.70,<0.112"
uvicorn = ">=0.15,<0.31"
dependency-injector = "^4.37.0"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
jsonpath-ng = "^1.5.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
tox = "^4.15.1"
black = "^24.4"
flake8 = "^7.1.0"

[tool.poetry.scripts]
hookbridge = "hookbridge.server:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
